@@ -1,5 +1,11 @@
 2010-12-16  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix PIC flags with MPI wrappers using Portland on GNU/Linux.
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC) [linux]:
+	Match Portland compilers also using $CC -V output, to avoid
+	false negatives with MPI compiler drivers.
+	Report by Christian Rössel.
+
 	* libltdl/m4/libtool.m4 (_LT_SETUP): Fix quoting for
 	PATH_SEPARATOR.
 
